Working on traffice stops api layer

--- a/Server/App/App/Web.config
+++ b/Server/App/App/Web.config
@@ -80,9 +80,9 @@
   </entityFramework>
   <connectionStrings>
     
-    <add name="CmpdEntities" connectionString="metadata=res://*/Models.CmpdEF.csdl|res://*/Models.CmpdEF.ssdl|res://*/Models.CmpdEF.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=rasedgwick.database.windows.net;initial catalog=cmpd;user id=rasedgwick;password=Ras85Af0;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <!--<add name="CmpdEntities" connectionString="metadata=res://*/Models.CmpdEF.csdl|res://*/Models.CmpdEF.ssdl|res://*/Models.CmpdEF.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=rasedgwick.database.windows.net;initial catalog=cmpd_db;user id=rasedgwick;password=Ras85Af0;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
 
-    <!--<add name="CmpdEntities" connectionString="metadata=res://*/Models.CmpdEF.csdl|res://*/Models.CmpdEF.ssdl|res://*/Models.CmpdEF.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=rasedgwick;initial catalog=cmpd;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <add name="CmpdEntities" connectionString="metadata=res://*/Models.CmpdEF.csdl|res://*/Models.CmpdEF.ssdl|res://*/Models.CmpdEF.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=rasedgwick;initial catalog=cmpd;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
 
 </connectionStrings>
 </configuration>
