--- a/Client/Client/Client.csproj
+++ b/Client/Client/Client.csproj
@@ -163,10 +163,12 @@
     <Content Include="package.json" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\Build\bundle.js" />
+    <Content Include="Scripts\Build\_bundle.js" />
     <Content Include="Scripts\ES6\APIService.js" />
     <Content Include="Scripts\ES6\DemographicSearch.js" />
     <Content Include="Scripts\ES6\NetworkService.js" />
     <Content Include="Scripts\ES6\Site.js" />
+    <Content Include="Scripts\ES6\TrafficSearch.js" />
     <Content Include="webpack.config.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
