Network Server: Traffic Stops done

--- a/Client/Client./Client.csproj
+++ b/Client/Client./Client.csproj
@@ -167,6 +167,7 @@
     <Content Include="Scripts\ES6\DemographicSearch.js" />
     <Content Include="Scripts\ES6\NetworkService.js" />
     <Content Include="Scripts\ES6\Site.js" />
+    <Content Include="Scripts\ES6\TrafficSearch.js" />
     <Content Include="webpack.config.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
