--- a/Client/Client/Client.csproj
+++ b/Client/Client/Client.csproj
@@ -164,6 +164,7 @@
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\Build\bundle.js" />
     <Content Include="Scripts\ES6\APIService.js" />
+    <Content Include="Scripts\ES6\Components\Buttons.js" />
     <Content Include="Scripts\ES6\Components\Table.js" />
     <Content Include="Scripts\ES6\Types\DemographicSearch.js" />
     <Content Include="Scripts\ES6\NetworkService.js" />
