--- a/Client/Client./Client.csproj
+++ b/Client/Client./Client.csproj
@@ -164,6 +164,9 @@
     <None Include="Properties\PublishProfiles\cmpd-statistics - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\Build\bundle.js" />
+    <Content Include="Scripts\ES6\Components\Chart.js" />
+    <Content Include="Scripts\ES6\Components\Charts.js" />
+    <Content Include="Scripts\ES6\Components\OfficerShootingBarChart.js" />
     <Content Include="Scripts\ES6\Utility\APIService.js" />
     <Content Include="Scripts\ES6\Components\Buttons.js" />
     <Content Include="Scripts\ES6\Components\Table.js" />
